@@ -2061,19 +2061,18 @@ data:extend({
       "biochamber"
     },
     unit = {
-      count = 100,
+      count = 150,
       ingredients = {
         {"sp-automation-science-pack-2", 1},
-        {"sp-logistic-science-pack-2", 1},
-        {"sp-chemical-science-pack-2", 1},
-        {"sp-electronic-science-pack-1", 1},
+        {"logistic-science-pack", 1},
+        {"chemical-science-pack", 1},
         {"sp-material-science-pack-2", 1},
-        {"sp-geological-science-pack-2", 1},
-        {"production-science-pack", 1},
+        {"sp-geological-science-pack-1", 1},
+        {"sp-electronic-science-pack-1", 1},
         {"metallurgic-science-pack", 1},
         {"electromagnetic-science-pack", 1}
       },
-      time = 45,
+      time = 30,
     },
   },
   {
